<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_main"
    tools:context=".MainActivity">



    <RadioGroup
        android:id="@+id/pilihGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/pilihMale"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="wrap_content"
            android:background="@drawable/radio_flat_selector"
            android:button="@android:color/transparent"
            android:checked="true"
            android:gravity="center"
            android:paddingLeft="@dimen/_16sdp"
            android:paddingTop="@dimen/_3sdp"
            android:paddingRight="@dimen/_16sdp"
            android:paddingBottom="@dimen/_3sdp"
            android:text="@string/textMale"
            android:textColor="@drawable/radio_flat_text_selector" />
        <RadioButton
            android:id="@+id/pilihFemale"
            android:gravity="center"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="wrap_content"
            android:background="@drawable/radio_flat_selector"
            android:button="@android:color/transparent"
            android:paddingLeft="@dimen/_16sdp"
            android:paddingTop="@dimen/_3sdp"
            android:paddingRight="@dimen/_16sdp"
            android:paddingBottom="@dimen/_3sdp"
            android:text="Perempuan"
            android:textColor="@drawable/radio_flat_text_selector"
            />

    </RadioGroup>

    <TextView
        android:id="@+id/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"

        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal"
        android:text="@string/label_bobot"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.147" />

    <TextView
        android:id="@+id/label_tinggi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"

        android:layout_marginRight="8dp"
        android:layout_marginBottom="24dp"
        android:gravity="center_horizontal"
        android:text="@string/height"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/pilihGender"
        app:layout_constraintVertical_bias="0.364" />

    <TextView
        android:id="@+id/labelUmur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"

        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/labelUmur"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.576" />

    <Button
        android:id="@+id/tambahBerat"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:onClick="tmbBerat"
        android:text="@string/logo_plus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.225"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview"
        app:layout_constraintVertical_bias="0.033" />

    <Button
        android:id="@+id/kurangBerat"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:onClick="krgBerat"
        android:text="@string/logo_minus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview"
        app:layout_constraintVertical_bias="0.033" />

    <EditText
        android:id="@+id/inputBerat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"

        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="0"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/kurangBerat"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toEndOf="@+id/tambahBerat"
        app:layout_constraintTop_toBottomOf="@+id/textview" />

    <Button
        android:id="@+id/tambahTinggi"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:onClick="tmbtinggi"
        android:text="@string/logo_plus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.225"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_tinggi"
        app:layout_constraintVertical_bias="0.081" />

    <Button
        android:id="@+id/kurangTinggi"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:onClick="krgTinggi"
        android:text="@string/logo_minus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_tinggi"
        app:layout_constraintVertical_bias="0.081" />

    <EditText
        android:id="@+id/inputTinggi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"

        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="0"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/kurangBerat"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toEndOf="@+id/tambahBerat"
        app:layout_constraintTop_toBottomOf="@+id/label_tinggi" />

    <Button
        android:id="@+id/tambahUmur"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:onClick="tmbtUmur"
        android:text="@string/logo_plus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.249"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/inputUmur"
        app:layout_constraintVertical_bias="0.079" />

    <Button
        android:id="@+id/kurangUmur"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:onClick="krgUmur"
        android:text="@string/logo_minus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.973"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/inputUmur"
        app:layout_constraintVertical_bias="0.079" />

    <EditText
        android:id="@+id/inputUmur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"

        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="0"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/kurangBerat"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toEndOf="@+id/tambahBerat"
        app:layout_constraintTop_toBottomOf="@+id/labelUmur" />

    <Button
        android:id="@+id/calc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"

        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="56dp"
        android:onClick="calculateBMI"
        android:text="Hitung BMI"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>